--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-@import url("https://cdn-uicons.flaticon.com/2.4.0/uicons-bold-straight/css/uicons-bold-straight.css");
-@import url("https://cdn-uicons.flaticon.com/2.4.0/uicons-regular-straight/css/uicons-regular-straight.css");
-@import url("https://cdn-uicons.flaticon.com/2.4.0/uicons-thin-rounded/css/uicons-thin-rounded.css");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Tiny5&display=swap");
-
 body {
   background-color: #292929;
   height: 1400px;
@@ -15,74 +11,63 @@ header {
   width: 100%;
   padding: 0px;
   margin: 0px;
+  background-color: #19005f;
   position: fixed;
 }
 
 .title {
-  height: 100%;
+  height: 70%;
   width: 100%;
-  background-color: #2200807c;
   padding-top: 1px;
   margin: 0px;
 }
 
 .tit {
-  height: 80%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   padding-left: 5%;
   padding-top: 0px;
   margin-top: 0px;
   color: white;
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 200px;
+  font-weight: 10px;
   font-style: normal;
   font-size: 80px;
+  margin-bottom: 0px;
 }
 
 nav {
-  height: 4%;
+  height: 20%;
   width: 100%;
-  margin-top: 8%;
-  background-color: #22008000;
+  background-color: #19005f;
   padding-left: 5%;
-  position: fixed;
+  padding-top: 0px;
 }
 
 .nv {
   float: left;
   height: 100%;
-  width: 20%;
-  /* max-width: 200px;
-  max-height: 100px; */
+  width: 19%;
 }
-
-i {
-  /* color: white; */
-  height: 100%;
-  width: 20%;
-  float: left;
-  font-size: 30px;
-  padding-top: 2%;
-}
-
-.bt {
-  height: 80%;
-  width: 80%;
-  border-style: none;
-  background-color: #ffffff00;
+select {
+  background-color: #19005f;
   color: white;
-}
-
-.op {
-  width: 80%;
-  height: 100%;
-  text-align: start;
-  padding-left: 30%;
+  border: none !important;
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-size: 20px;
 }
 
 option {
-  list-style: none;
+  background-color: #19005f;
+  border-bottom: 0px solid white;
+  color: white;
+}
+
+.bt {
+  width: 80%;
+  height: 100%;
 }
 
 main {
