--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Tiny5&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
+
 body {
   background-color: #292929;
   height: 1400px;
@@ -13,6 +15,7 @@ header {
   margin: 0px;
   background-color: #19005f;
   position: fixed;
+  z-index: 3;
 }
 
 .title {
@@ -71,9 +74,94 @@ option {
 }
 
 main {
-  margin-top: 15%;
-  padding-left: 5%;
-  padding-right: 5%;
-  position: absolute;
+  width: 100%;
+  height: 70%;
+  padding-top: 15%;
   color: white;
+  font-family: "JetBrains Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 100px;
+  font-size: 25px;
+  font-style: normal;
+}
+
+.content {
+  width: 90%;
+  height: 100%;
+  margin-left: 5%;
+  text-align: center;
+}
+
+.content {
+  width: 90%;
+  height: 100%;
+  margin-left: 5%;
+  text-align: center;
+}
+
+footer {
+  width: 100%;
+  height: 20%;
+  background-color: #1c1d2c;
+  color: white;
+  position: relative;
+  text-align: center;
+}
+
+.content-footer {
+  width: 100%;
+  height: 100%;
+}
+
+.pp {
+  font-family: "JetBrains Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 40px;
+  font-style: normal;
+  text-align: start;
+  padding: 2%;
+}
+.hidden {
+  display: none;
+}
+
+.text {
+  width: 60%;
+  height: auto;
+  float: left;
+}
+
+.imgC {
+  width: 38%;
+  height: auto;
+  padding-top: 10%;
+}
+
+.galeria {
+  width: 90%;
+  height: 100%;
+  text-align: center;
+  padding-left: 5%;
+}
+
+section {
+  display: flex;
+  width: 80%;
+  height: 40%;
+  padding-left: 10%;
+}
+
+section img {
+  width: 0px;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: 0.8;
+  transition: 0.5s ease;
+}
+
+section img:hover {
+  cursor: crosshair;
+  width: 300px;
+  opacity: 1;
+  filter: contrast(120%);
 }
