--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Tiny5&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
+@import url("https://cdn-uicons.flaticon.com/2.4.0/uicons-bold-rounded/css/uicons-bold-rounded.css");
 
 body {
   background-color: #292929;
@@ -44,7 +45,7 @@ nav {
   height: 20%;
   width: 100%;
   background-color: #19005f;
-  padding-left: 5%;
+  padding-left: 1%;
   padding-top: 0px;
 }
 
@@ -73,6 +74,13 @@ option {
   height: 100%;
 }
 
+.cerrar {
+  width: 100%;
+  height: 100%;
+  background-color: #19005f;
+  border: 0px;
+}
+
 main {
   width: 100%;
   height: 70%;
@@ -81,7 +89,7 @@ main {
   font-family: "JetBrains Mono", monospace;
   font-optical-sizing: auto;
   font-weight: 100px;
-  font-size: 25px;
+  font-size: 22px;
   font-style: normal;
 }
 
@@ -89,7 +97,6 @@ main {
   width: 90%;
   height: 100%;
   margin-left: 5%;
-  text-align: center;
 }
 
 .content {
