--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: #292929;
-  height: 1400px;
+  height: auto;
   padding: 0;
   margin: 0;
 }
@@ -83,7 +83,7 @@ option {
 
 main {
   width: 100%;
-  height: 70%;
+  height: 90%;
   padding-top: 15%;
   color: white;
   font-family: "JetBrains Mono", monospace;
@@ -101,7 +101,7 @@ main {
 
 .content {
   width: 90%;
-  height: 100%;
+  height: auto;
   margin-left: 5%;
   text-align: center;
 }
