--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,12 @@ header {
   width: 100%;
   padding-top: 1px;
   margin: 0px;
+  text-align: center;
 }
 
 .tit {
   height: 100%;
   width: 100%;
-  padding-left: 5%;
   padding-top: 0px;
   margin-top: 0px;
   color: white;
@@ -83,7 +83,7 @@ option {
 
 main {
   width: 100%;
-  height: 90%;
+  height: auto;
   padding-top: 15%;
   color: white;
   font-family: "JetBrains Mono", monospace;
@@ -91,6 +91,10 @@ main {
   font-weight: 100px;
   font-size: 22px;
   font-style: normal;
+  background-image: url("../img/10.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-repeat: round; */
 }
 
 .content {
@@ -101,7 +105,7 @@ main {
 
 .content {
   width: 90%;
-  height: 2500px;
+  height: auto;
   margin-left: 5%;
   text-align: center;
 }
@@ -136,12 +140,13 @@ footer {
   width: 60%;
   height: auto;
   float: left;
+  text-align: justify;
 }
 
 .imgC {
   width: 38%;
   height: auto;
-  padding-top: 10%;
+  padding-top: 5%;
 }
 
 .galeria {
